# ormgenerator

./: .coverage  .gitignore  .pylintrc  Makefile  README.md  classes.spec  example.py  pyproject.toml
ormgenerator/: main.py  parse.py  types.py
ormgenerator/templates/: class.py.j2  model.py.j2
schemas/: project.json  user.json
tests/: test_fake.py
